--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" href="bootstrap.min.css" media="screen">
         <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap.min.css" media="screen">
+        <link rel="stylesheet" href="style.css" media="screen">
 
         <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -43,7 +44,11 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="https://github.com/chillarAnand/TechScore/">Source Code</a>
+                            <a class="nav-link" target="_blank" href="https://goo.gl/forms/r3tNSjkxT7dTyIyo1">Contact</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" target="_blank" href="https://github.com/ChillarAnand/TechScore/">Source Code</a>
                         </li>
                     </ul>
 
@@ -55,9 +60,23 @@
         <br/>
         <br/>
 
-        <section class="home" id="home">
+
+        <!-- home -->
+        <section id="home">
             <div class="container">
-                TechScore provides insights into the trends in technologies used by the top 1 million websites.
+                <br/<br/><br/><br/>
+                <br/<br/><br/><br/>
+                <div class="text-center">
+                    <h1>
+                        Get websites using a particular technology for free
+                    </h1>
+                    <h2>
+                        TechScore detects CMS, web frameworks, servers, programming lanagues,
+                        analytics tools and many other technologies used by websites.
+                    </h2>
+                </div>
+                <br/<br/><br/><br/>
+                <br/<br/><br/><br/>
             </div>
         </section>
 
@@ -65,6 +84,7 @@
         <!-- technologies -->
         <section id="technologies">
             <div class="container">
+                <br/<br/><br/><br/>
                 <div class="table-responsive">
                     <table id="tech" class="display table table-bordered table-hover table-condensed">
                         <thead>
@@ -89,12 +109,10 @@
 
         <!-- data -->
         <section id="data">
-            <br/>
-            <br/>
-            <br/>
-
-            <div class="container">
-                <h2>TechScore Data</h2>
+            <div class="container text-center">
+                <br/<br/><br/><br/>
+                <h1>TechScore Data</h1>
+                <h4>
                 <p>
                     TechScore crawls home page of top 1 million alexa websites and stores data in warc format.
                     Raw data can be downloaded <a href="https://www.kaggle.com/anandreddypandikunta/techscore">from here</a>.
@@ -107,7 +125,9 @@
                     In the long run, we want to crawl all the websites on internet and perform analysis on them.
                     We are also looking into <a href="http://commoncrawl.org">CommonCrawl</a> to reuse the crawl data.
                 </p>
-
+                </h4>
+                <br/<br/><br/><br/>
+                <br/<br/><br/><br/>
             </div>
         </section>
 
